# boilerplate_django

./: .dockerignore  .editorconfig  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  compose.yml  esquema_boilerplate.drawio  package-lock.json  pyproject.toml  run  tailwind.config.js  tox.ini
.github/: dependabot.yml
.github/workflows/: docker.yml  hadolint.yml  lint-docker.yml  lint.yml  main.yml  shellcheck.yml  test.yml
docker/: .env.example  Dockerfile  docker-compose.yml
docker/nginx.conf/: site-develop.conf
docker/settings/: dev.example.env  settings.env.example
docs/: esquema_boilerplate.drawio
nginx.conf/: site-develop.conf
src/apps/base/: admin.py  dashboard.py  models.py  post_office.py  views.py
src/apps/base/fields/: choicefield.py
src/apps/base/locale/ca/LC_MESSAGES/: django.po
src/apps/base/migrations/: 0001_initial.py  0002_data_emails.py
src/apps/celery/: apps.py  celery.py
src/apps/counties_towns/: admin.py  apps.py  models.py
src/apps/counties_towns/fixtures/: counties.json  towns.json
src/apps/counties_towns/management/commands/: import_counties_towns.py  update_counties_towns.py
src/apps/counties_towns/migrations/: 0001_initial.py
src/apps/demo/: admin.py  forms.py  models.py  views.py
src/apps/demo/migrations/: 0001_initial.py  0002_alter_data_field_number_alter_data_field_password_and_more.py  0003_alter_data_field_select_checkbox.py  0004_alter_data_field_boolean_checkbox_and_more.py
src/apps/demo/tests/: factories.py  test_forms.py  test_models.py
src/apps/users/: admin.py  forms.py  middleware.py  models.py  services.py  tests.py  urls.py  utils.py  views.py
src/apps/users/locale/ca/LC_MESSAGES/: django.mo  django.po
src/apps/users/management/commands/: auto_superuser.py
src/apps/users/migrations/: 0001_initial.py  0002_data_superuser.py  0002_user_name_user_surnames.py  0003_data_emails.py  0004_alter_user_updated_at.py  0005_alter_user_created_by.py  0005_user_email_verification_code_user_email_verified_and_more.py  0006_alter_user_email_alter_user_name_alter_user_surnames.py  0007_alter_user_created_at_alter_user_email_and_more.py
src/apps/users/tests/: factories.py  test_forms.py  test_models.py  test_utils.py  test_views.py
src/assets/js/: scripts.js
src/assets/styles/: output.css  styles.css  styles.css.map
src/assets/styles/sass/: styles.scss
src/assets/styles/sass/config/: _grid.scss  _reset.scss  _typography.scss  _variables.scss  config.scss
src/assets/styles/sass/content/components/: _footer.scss  _forms.scss  _header.scss  components.scss
src/assets/styles/sass/content/elements/: _buttons.scss  _form_fields.scss  _logos.scss  _richtext.scss  elements.scss
src/conf/: settings.py  testing.py  urls.py
src/conf/locale/ca/LC_MESSAGES/: django.mo  django.po
src/locale/ca/LC_MESSAGES/: django.mo  django.po
src/project/: apps.py  dashboard.py  decorators.py  mixins.py  models.py  settings.py  test_selenium.py  urls.py  views.py  wsgi.py
src/project/fields/: base.py  charfield.py  choicefield.py  flowbite.py
src/project/locale/ca/LC_MESSAGES/: django.mo  django.po
src/project/migrations/: 0001_initial.py
src/project/templatetags/: language.py
src/project/tests/: test_selenium.py
src/project/widgets/: checkbox.py  select.py
src/templates/: 404.html  500.html  503.html  base.html  base_form.html  base_old.html  base_success.html  create.html  demo_flowbite.html  details.html  home.html  home_internal.html  list.html  standard_success.html  update.html
src/templates/components/: form_errors.html
src/templates/django/forms/: div.html
src/templates/django/forms/widgets/: checkbox_option.html  checkbox_select.html  radio.html  radio_option.html
src/templates/errors/: 404.html  503.html
src/templates/fields/: field_checkbox_boolean.html  field_default.html
src/templates/profile/: details.html
src/templates/registration/: login.html  login_old.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  privacy_policy.html  send_verification_code.html  signup.html  user_validation.html  user_validation_confirm.html
src/templates/widgets/: checkbox.html  select.html
(+3 files in other folders)
