[tool.poetry]
name = "boilerplate_django"
version = "0.1.0"
description = "Plantilla per a nous projectes web amb Django."
authors = ["Codi Cooperatiu <hola@codi.coop>"]
license = "gpl-3.0"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
django-environ = "^0.11.2"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.8"
whitenoise = "^6.5.0"
django-maintenance-mode = "^0.18.0"
tox = "^4.11.3"
django-extensions = "^3.2.3"
django-grappelli = "^3.0.8"
django-constance = {extras = ["database"], version = "^3.1.0"}
django-storages = "^1.14.1"
boto3 = "^1.28.58"
django-post-office = "^3.7.1"
django-login-required-middleware = "^0.9.0"
django-sendgrid-v5 = "^1.2.2"
celery = "^5.3.4"
redis = "^5.0.1"
sentry-sdk = "^1.31.0"
django-logentry-admin = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
factory-boy = "^3.3.0"
pytest = "^7.4.2"
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.7"

[tool.black]
exclude = '''
/(
  | migrations
)/

'''

[tool.isort]
skip = "migrations"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
