[tool.poetry]
name = "App name"
version = "0.1.0"
description = "App's name"
authors = ["Codi Cooperatiu <hola@codi.coop>"]
license = "gpl-3.0"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "~3.12"
Django = "^5.1"
psycopg2-binary = "^2.9.10"
django-extensions = "^3.2.3"
django-environ = "^0.11.2"
django-maintenance-mode = "^0.21.1"
django-storages = "^1.14.4"
django-post-office = "^3.9.0"
django-sendgrid-v5 = "^1.2.3"
django-logentry-admin = "^1.1.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.2.0"}
django-constance = {extras = ["database"], version = "^4.1.2"}
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"
boto3 = "^1.35.42"
structlog = "^24.4.0"
django-structlog = "^8.1.0"
rich = "^13.9.2"
icecream = "^2.1.3"
pyyaml = "^6.0.2"
codi-cooperatiu-internal-tools = "^0.1"
django-active-link = "^0.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
dennis = "^1.1.0"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-sugar = "^1.0.0"
factory-boy = "^3.3.1"
selenium = "^4.25.0"

[tool.ruff]
# See https://docs.astral.sh/ruff/settings/ for Ruff's settings
# See https://docs.astral.sh/ruff/rules/ for a list of all Ruff's rules
lint.extend-select = ["I", "F", "E", "W", "N", "B", "DJ"]
extend-exclude = ["migrations"]
src = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
